change vendor name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "asadbek/mvc-framework",
     "autoload": {
         "psr-4": {
-            "Asadbek\\MvcFramework\\": "src/"
+            "alex_snow\\MvcFramework\\": "src/"
         }
     },
     "require": {}
